MessageService 고도화 구현