@@ -1,8 +1,14 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import com.sprint.mission.discodeit.dto.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.message.CreateRequest;
+import com.sprint.mission.discodeit.dto.message.MessageResponse;
+import com.sprint.mission.discodeit.dto.message.MessageUpdateRequest;
+import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
@@ -19,23 +25,34 @@ public class BasicMessageService implements MessageService {
     private final MessageRepository messageRepository;
     private final UserRepository userRepository;
     private final ChannelRepository channelRepository;
+    private final BinaryContentRepository binaryContentRepository;
 
     @Override
-    public Message create(String contents, UUID userID, UUID channelID) {
-        User sender = userRepository.find(userID)
-                .orElseThrow(() -> new IllegalArgumentException("User not found: " + userID));
-        Channel channel = channelRepository.find(channelID)
-                .orElseThrow(() -> new IllegalArgumentException("Channel not found: " + channelID));
+    public Message create(CreateRequest request) {
+        User sender = userRepository.find(request.userID())
+                .orElseThrow(() -> new IllegalArgumentException("User not found: " + request.userID()));
+        Channel channel = channelRepository.find(request.channelId());
 
         // sender가 해당 channel의 member인지 check
         if (!channel.getMembersList().contains(sender)) {
-            throw new IllegalArgumentException("User is not in this channel." + channelID);
+            throw new IllegalArgumentException("User is not in this channel." + request.channelId());
         }
 
-        // [저장]
-        Message message = new Message(contents, sender, channel);
+        // 첨부파일, 생성
+        List<UUID> attachments = new ArrayList<>();
+        if(request.attachments() != null){
+            for(BinaryContentCreateRequest req : request.attachments()){
+                BinaryContent attachment = new BinaryContent(req.bytes(), req.contentType());
+                binaryContentRepository.save(attachment);
 
-        // [비즈니스]
+                attachments.add(attachment.getId());
+            }
+        }
+
+        // messsage 생성
+        Message message = new Message(request.content(), sender, channel, attachments);
+
+        // sender ,channel에 추가
         sender.addMessage(message);
         channel.addMessage(message);
 
@@ -46,26 +63,49 @@ public class BasicMessageService implements MessageService {
     }
 
     @Override
-    public Message find(UUID messageID) {
-        return messageRepository.find(messageID)
-                .orElseThrow(() -> new IllegalArgumentException("Message not found: " + messageID));
-    }
-
-    @Override
-    public List<Message> findAll() {
-        return messageRepository.findAll();
-    }
-
-    @Override
-    public Message updateName(UUID messageID, String contents) {
-        if (messageID == null) {
-            throw new IllegalArgumentException("id must not be null");
-        }
-
-        // [저장]
+    public MessageResponse find(UUID messageID) {
         Message msg = messageRepository.find(messageID)
                 .orElseThrow(() -> new IllegalArgumentException("Message not found: " + messageID));
-        msg.updateContents(contents);
+        return new MessageResponse(
+                msg.getId(),
+                msg.getContents(),
+                msg.getSender().getId(),
+                msg.getChannel().getId(), msg.getAttachmentIDs()
+        );
+    }
+
+    @Override
+    public List<MessageResponse> findAllByUserID() {
+        return messageRepository.findAll().stream()
+                .map(msg -> new MessageResponse(
+                        msg.getId(),
+                        msg.getContents(),
+                        msg.getSender().getId(),
+                        msg.getChannel().getId(),
+                        msg.getAttachmentIDs()
+                )).toList();
+    }
+
+    @Override
+    public MessageResponse update(MessageUpdateRequest request) {
+        // [저장]
+        Message msg = messageRepository.find(request.messageID())
+                .orElseThrow(() -> new IllegalArgumentException("Message not found: " + request.messageID()));
+
+        // content update
+        if (request.content() == null) {
+            msg.updateContents(request.content());
+
+        }
+
+        // attachment 업데이트
+        if (request.attachments() != null) {
+            for (BinaryContentCreateRequest req : request.attachments()) {
+                BinaryContent attachment = new BinaryContent(req.bytes(), req.contentType());
+                binaryContentRepository.save(attachment);
+                msg.addAttachment(attachment.getId());
+            }
+        }
 
         UUID userID = msg.getSender().getId();
         UUID channelID = msg.getChannel().getId();
@@ -74,41 +114,52 @@ public class BasicMessageService implements MessageService {
         User sender = userRepository.find(userID)
                 .orElseThrow(() -> new IllegalArgumentException("User not found: " + userID));
         for(Message m : sender.getMessageList()){
-            if(m.getId().equals(messageID)){
-                m.updateContents(contents);
+            if(m.getId().equals(msg.getId())){
+                m.updateContents(request.content());
             }
         }
         userRepository.save(sender);
 
         // channel에서 반영
-        Channel channel = channelRepository.find(channelID)
-                .orElseThrow(() -> new IllegalArgumentException("Channel not found: " + channelID));
+        Channel channel = channelRepository.find(channelID);
         for(Message m : channel.getMessageList()){
-            if(m.getId().equals(messageID)){
-                m.updateContents(contents);
+            if(m.getId().equals(request.messageID())){
+                m.updateContents(request.content());
             }
         }
         channelRepository.save(channel);
-
-        return messageRepository.save(msg);
+        messageRepository.save(msg);
+        return new MessageResponse(
+                msg.getId(),
+                msg.getContents(),
+                msg.getSender().getId(),
+                msg.getChannel().getId(),
+                msg.getAttachmentIDs()
+        );
     }
 
     @Override
     public void deleteMessage(UUID messageID) {
         Message msg = messageRepository.find(messageID)
                 .orElseThrow(() -> new IllegalArgumentException("Message not found: " + messageID));
+
         User sender = msg.getSender();
         Channel channel = msg.getChannel();
 
         UUID senderID = sender.getId();
         UUID channelID = channel.getId();
 
+        // 첨부 파일 삭제
+        for (UUID attachmentID : msg.getAttachmentIDs()) {
+            binaryContentRepository.delete(attachmentID);
+        }
+
         // 여기 check
         sender = userRepository.find(senderID)
                 .orElseThrow(() -> new IllegalArgumentException("User not found: " + senderID));
-        channel = channelRepository.find(channelID)
-                .orElseThrow(() -> new IllegalArgumentException("Channel not found: " + channelID));
+        channel = channelRepository.find(channelID);
 
+        // sender, channel에서 msg 삭제
         sender.removeMessage(msg);
         channel.removeMessage(msg);
 
@@ -118,20 +169,30 @@ public class BasicMessageService implements MessageService {
     }
 
     @Override
-    public List<String> findMessagesByChannel(UUID channelID) {
-        Channel channel = channelRepository.find(channelID)
-                .orElseThrow(() -> new IllegalArgumentException("Channel not found: " + channelID));
+    public List<MessageResponse> findMessagesByChannel(UUID channelID) {
+        Channel channel = channelRepository.find(channelID);
         return channel.getMessageList().stream()
-                .map(Message::getContents)
-                .collect(java.util.stream.Collectors.toList());
+                .map(msg -> new MessageResponse(
+                        msg.getId(),
+                        msg.getContents(),
+                        msg.getSender().getId(),
+                        msg.getChannel().getId(),
+                        msg.getAttachmentIDs()
+                )).toList();
     }
 
     @Override
-    public List<String> findMessagesByUser(UUID userID) {
+    public List<MessageResponse> findMessagesByUser(UUID userID) {
         User user = userRepository.find(userID)
                 .orElseThrow(() -> new IllegalArgumentException("User not found: " + userID));
+
         return user.getMessageList().stream()
-                .map(Message::getContents)
-                .collect(java.util.stream.Collectors.toList());
+                .map(msg -> new MessageResponse(
+                        msg.getId(),
+                        msg.getContents(),
+                        msg.getSender().getId(),
+                        msg.getChannel().getId(),
+                        msg.getAttachmentIDs()
+                )).toList();
     }
 }
